--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>Booking</span></span>
-									<div class="parallax"><video autoplay muted loop id="myVideo">
-  									<source src="/home/akshay/Downloads/dress-up-virtuo-master/images/1.mp4" type="video/mp4">
- 									Your browser does not support HTML5 video.
-									</video></div> 
+									<div class="parallax">
+									<img src="https://media1.tenor.com/images/463430aeafa79f73a296f46fd7383276/tenor.gif?itemid=11325747">
+								</div> 
 								</a>
 							</article>
 
